
- Funcarg factories can now dynamically apply a marker to a 
  test invocation.  This is particularly useful if a factory
  provides parameters to a test which you expect-to-fail:

    def pytest_funcarg__arg(request):
        request.applymarker(py.test.mark.xfail(reason="flaky config"))
        ...

    def test_function(arg):
        ...

Bug fixes / Maintenance
++++++++++++++++++++++++++

- fix issue105 assignment on the same line as a failing assertion
- fix issue104 proper escaping for test names in junitxml plugin
- fix issue57 -f|--looponfail to work with xpassing tests
- fix py.code.compile(source) to generate unique filenames 
- fix assertion re-interp problems on PyPy, by defering code 
  compilation to the (overridable) Frame.eval class. 
- fix pyimport() to work with directories
- streamline py.path.local.mkdtemp implementation and usage
- don't print empty lines when showing junitxml-filename
- add optional boolean ignore_errors parameter to py.path.local.remove
- fix terminal writing on win32/python2.4 

Changes between 1.3.0 and 1.3.1
==================================================

New features 
++++++++++++++++++

- issue91: introduce new py.test.xfail(reason) helper 
  to imperatively mark a test as expected to fail. Can 
  be used from within setup and test functions. This is
  useful especially for parametrized tests when certain 
  configurations are expected-to-fail.  In this case the
  declarative approach with the @py.test.mark.xfail cannot
  be used as it would mark all configurations as xfail. 

- issue102: introduce new --maxfail=NUM option to stop
  test runs after NUM failures.  This is a generalization
  of the '-x' or '--exitfirst' option which is now equivalent
  to '--maxfail=1'.  Both '-x' and '--maxfail' will 
  now also print a line near the end indicating the Interruption. 

- issue89: allow py.test.mark decorators to be used on classes
  (class decorators were introduced with python2.6) and 